[project]
name = "neuracode_ai_agent"
version = "0.1.0"
description = "neuracode-ai-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
neuracode_ai_agent = "neuracode_ai_agent.main:run"
run_crew = "neuracode_ai_agent.main:run"
train = "neuracode_ai_agent.main:train"
replay = "neuracode_ai_agent.main:replay"
test = "neuracode_ai_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
